--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -48,4 +48,5 @@ ENV LC_ALL ja_JP.UTF-8
 RUN pip install -i https://pypi.tuna.tsinghua.edu.cn/simple pyyaml==3.13 scikit-image==0.14.1 numpy==1.15.4 scipy==1.1.0 torchvision==0.3.0 torch==1.1.0 tensorboardX==2.0 opencv-python==4.1.2.30 Cython==0.29.2 matplotlib==3.0.2
 
 # Additional packages by miya
-RUN pip install protobuf==3.20.3 timm==0.4.5 torchvision==0.2.2 Pillow==6.1.0 PyYAML==5.1
+RUN pip install protobuf==3.20.3 timm==0.4.5 torchvision==0.2.2 Pillow==6.1.0 PyYAML==5.1 ipykernel PrettyTable
+# RUN pip install --upgrade scikit-image
